--- a/catalogo.css
+++ b/catalogo.css
@@ -93,6 +93,15 @@ button {
   border: none;
 }
 @media screen and (max-width: 768px) {
+  nav {
+    flex-direction: column;
+  }
+  .logo img {
+    margin-left: 10px;
+  }
+  ul {
+    margin-left: 10px;
+  }
   .hero-section {
     background-image: url("./images/captainmarvelheader.jpg");
     background-size: cover;
